# Recipe-Web-App

./: .gitignore  README.md  app.py  models.py  nutrition.py  pyproject.toml  recipe_generator.py  requirements.txt  web_search.py
src/: __init__.py
src/api/: huggingface_client.py  themealdb_client.py
src/core/: state_manager.py
src/services/: cache_migration.py  embedding_service.py  nutrition_service.py  rag_manager.py  recipe_service.py  shared_cache.py  web_search_service.py
src/ui/: components.py
src/utils/: image_utils.py
